Add admin page, place it behind basic auth
Includes a browser test link, and one to kick off a full scraper run.

--- a/src/main/resources/application-local.example.yml
+++ b/src/main/resources/application-local.example.yml
@@ -5,6 +5,10 @@ spring:
     url: jdbc:postgresql://127.0.0.1/postgres?currentSchema=schema
   thymeleaf:
     cache: false
+  security:
+    user.name: admin
+    user.password: admin
+    user.roles: ADMIN
 
 server:
   port: 5678
