Scraper crons are now controlled via application config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,8 @@ spring:
 mybatis:
   configuration:
     default-enum-type-handler: org.apache.ibatis.type.EnumOrdinalTypeHandler
+
+dohmap:
+  jobs:
+    full-run: 0 0 22 * * 5
+    lite-run: 0 0 22 * * 1-4
