Add support for Utah County inspections
Completely different platform than what SLC uses, but the data models mostly fit together.

* Add a source column/enum, to track where an establishment came from.
* Add a system identifier (sys_id) column to establishments and inspections. Utah County has unique identifiers for each establishment and inspection. These will be used for matching instead of other establishment fields for Utah County.
* Map certain city names to its correct one in pins
* Always capitalize city names in pins

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,14 @@ dohmap:
     lite-run: 0 0 22 * * 1-4
   google-maps:
     allowed-establishment-types: Restaurants,Beverage,Breakfast,Food Permit
+  city-mappings:
+    ['AMERIAN FORK']: AMERICAN FORK
+    ['CEDER HILLS']: CEDAR HILLS
+    ['COPPERTON TS']: COPPERTON
+    ['EAGLE MTN']: EAGLE MOUNTAIN
+    ['KEARNS TS']: KEARNS
+    ['MILLCREEK TS']: MILLCREEK
+    ['PLEASANTE GROVE']: PLEASANT GROVE
+    ['PLEASANT GROVCE']: PLEASANT GROVE
+    ['PLEASAT GROVE']: PLEASANT GROVE
+    ['PROVO CANYON']: PROVO
