--- a/src/main/resources/application-local.example.yml
+++ b/src/main/resources/application-local.example.yml
@@ -20,6 +20,10 @@ dohmap:
   selenium:
     sessions: 2
     remote: http://grid-url:4444
+    # headless may not be needed for remote selenium sessions
     args: >
-      --headless=new  # not needed for remote selenium sessions
+      --headless=new
   origin: https://dohmap.com
+  about-page: >
+    <h1>About DOH Map!</h1>
+    <p>Default about page!</p>
