Add Swagger UI docs auto generation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,3 +37,6 @@ dohmap:
     ['PLEASANT GROVCE']: PLEASANT GROVE
     ['PLEASAT GROVE']: PLEASANT GROVE
     ['PROVO CANYON']: PROVO
+
+springdoc:
+  paths-to-exclude: '/api/admin/**'
